CSS tidied up and small tweaks made to align page

--- a/HTML/help.html
+++ b/HTML/help.html
@@ -50,7 +50,7 @@
       <section id="code-help">
         <div id="help-paragraf"><p> Need help with a coding project or have a question about a programming language or concept...?</p></div>
 
-        <h4 style="display: flex; justify-content: center;">ACCESS HELPFUL ONLINE RESOURCES</h4>
+        <h4 style="display: flex; justify-content: center; font-family: 'Kaushan Script', cursive;">ACCESS HELPFUL ONLINE RESOURCES</h4>
       </section>
         
       <section class="help-forums">
@@ -77,7 +77,7 @@
 
       <section class="tips">
 
-        <H4><p>CLICK BELOW BUTTONS TO ACCESS..</p></H4> <br> <p><strong>TOP TIPS FOR STUDENTS!</strong></p> 
+        <h4><p>CLICK BELOW BUTTONS TO ACCESS..</p></h4> <br> <p><strong>TOP TIPS FOR STUDENTS!</strong></p> 
         
         <div class="tips-buttons">
 
