HTML pages duplicated outside of folder

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Caveat&family=Kalam&family=Kaushan+Script&family=Lobster+Two&family=Oleo+Script&family=Permanent+Marker&family=Quicksand:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>Affirmation Page</title>
+    <title>SoulFul Truths</title>
   </head>
 
   <body>
