--- a/help.html
+++ b/help.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/css2?family=Caveat&family=Kalam&family=Kaushan+Script&family=Lobster+Two&family=Oleo+Script&family=Permanent+Marker&family=Quicksand:wght@300&display=swap"
       rel="stylesheet"
     />
-    <title>Affirmation Page</title>
+    <title>Help - Soulful Truths</title>
   </head>
 
 
