--- a/HTML/help.html
+++ b/HTML/help.html
@@ -77,7 +77,7 @@
 
       <section class="tips">
 
-        <h4><p>CLICK BELOW BUTTONS TO ACCESS..</p></h4> <br> <p><strong>TOP TIPS FOR STUDENTS!</strong></p> 
+        <h4><p>CLICK BELOW BUTTONS TO ACCESS..</p></h4> <br> <p style="font-family: 'Kaushan Script', cursive;"><strong>TOP TIPS FOR STUDENTS!</strong></p> 
         
         <div class="tips-buttons">
 
